--- a/index.html
+++ b/index.html
@@ -8,7 +8,55 @@
 </head>
 <body>
      <nav></nav>
-    <main></main>
+    <main id="scrollContainer">
+
+        <section id="s1">
+            <div class="foods" id="f1">
+                <img src="imgs/10000492-removebg-preview (1).png" alt="">
+            </div>
+            <h1>PIZZA 1</h1>
+        </section>
+
+        <section>
+            <div class="foods">
+                <img src="imgs/10000492-removebg-preview (1).png" alt="">
+            </div>
+            <h1>PIZZA 2</h1>
+        </section>
+
+        <section>
+            <div class="foods">
+                <img src="imgs/10000492-removebg-preview (1).png" alt="">
+            </div>
+            <h1>PIZZA 3</h1>
+        </section>
+
+        <section>
+            <div class="foods">
+                <img src="imgs/10000492-removebg-preview (1).png" alt="">
+            </div>
+            <h1>PIZZA 4</h1>
+        </section>
+
+
+        <section>
+            <div class="foods">
+                <img src="imgs/10000492-removebg-preview (1).png" alt="">
+            </div>
+            <h1>PIZZA 5</h1>
+        </section>
+
+        <section>
+            <div class="foods">
+                <img src="imgs/10000492-removebg-preview (1).png" alt="">
+            </div>
+            <h1>PIZZA 6</h1>
+        </section>
+        
+    </main>
+
     <footer></footer>
 </body>
+
+<script src="js/indes.js"></script> 
 </html>
