--- a/PGSelection/pageSelection.html
+++ b/PGSelection/pageSelection.html
@@ -4,59 +4,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/index.css">
+    <script src="js/index.js"></script>
     <title>Cardápio</title>
 </head>
 <body>
      <nav></nav>
-    <main id="scrollContainer">
+    <main>
 
-        <section id="s1">
-            <div class="foods" id="f1">
+        <section class="foods" id="s1">
+            <div id="f1">
                 <img src="imgs/10000492-removebg-preview (1).png" alt="">
             </div>
-            <h1>PIZZA 1</h1>
+            <div class="txt">
+                <h1>PIZZA 1</h1>
+            </div>
         </section>
 
-        <section>
-            <div class="foods">
+        <section class="foods">
+            <div>
                 <img src="imgs/10000492-removebg-preview (1).png" alt="">
             </div>
-            <h1>PIZZA 2</h1>
+            <div class="txt">
+                <h1>PIZZA 2</h1>
+            </div>
         </section>
 
-        <section>
-            <div class="foods">
+        <section class="foods">
+            <div>
                 <img src="imgs/10000492-removebg-preview (1).png" alt="">
             </div>
-            <h1>PIZZA 3</h1>
+            <div class="txt">
+                <h1>PIZZA 3</h1>
+            </div>
         </section>
 
-        <section>
-            <div class="foods">
+        <section class="foods">
+            <div>
                 <img src="imgs/10000492-removebg-preview (1).png" alt="">
             </div>
-            <h1>PIZZA 4</h1>
+            <div class="txt">
+                <h1>PIZZA 4</h1>
+            </div>
         </section>
 
 
-        <section>
-            <div class="foods">
+        <section class="foods">
+            <div>
                 <img src="imgs/10000492-removebg-preview (1).png" alt="">
             </div>
-            <h1>PIZZA 5</h1>
+            <div class="txt">
+                <h1>PIZZA 5</h1>
+            </div>
         </section>
 
-        <section>
-            <div class="foods">
+        <section class="foods">
+            <div>
                 <img src="imgs/10000492-removebg-preview (1).png" alt="">
             </div>
-            <h1>PIZZA 6</h1>
+            <div class="txt">
+                <h1>PIZZA 6</h1>
+            </div>
         </section>
         
     </main>
 
     <footer></footer>
 </body>
-
-<script src="js/indes.js"></script> 
 </html>
